@startuml Database_Schema_ERD

' Title and description
title JobWise Database Schema - Current Implementation (F1-F6 Complete)

!define PRIMARY_KEY_COLOR LightBlue
!define FOREIGN_KEY_COLOR LightGreen
!define ENUM_COLOR LightYellow

' User Management Entities
entity UserModel {
  +id: String(36) (PK) <<UUID>>
  --
  email: String(255) (UNIQUE, INDEX)
  password_hash: String(255)
  is_active: Boolean = True
  is_verified: Boolean = False
  --
  first_name: String(100)?
  last_name: String(100)?
  phone: String(20)?
  timezone: String(50)?
  --
  subscription_tier: String(20) = 'free'
  subscription_expires_at: DateTime?
  generations_this_month: Integer = 0
  last_active_at: DateTime?
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note top of UserModel
    **F3 Authentication Complete**
    - JWT token authentication implemented
    - bcrypt password hashing
    - User registration/login working
    - 13/13 tests passing (100% success)
end note

entity UserSessionModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36) (FK → users.id)
  --
  session_token: String(255) (UNIQUE)
  refresh_token: String(255)? (UNIQUE)
  expires_at: DateTime
  is_active: Boolean = True
  --
  user_agent: String(500)?
  ip_address: String(45)?
  device_type: String(50)?
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

' Profile Management Entities (F4 Complete)
entity MasterProfileModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36) (FK → users.id)
  --
  full_name: String(200)
  email: String(255)
  phone: String(20)?
  location: String(200)?
  linkedin: String(500)?
  github: String(500)?
  website: String(500)?
  --
  professional_summary: Text?
  version: Integer = 1
  is_active: Boolean = True
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note right of MasterProfileModel
    **F4 Profile Management Complete**
    - Full CRUD operations implemented
    - Experience/Education/Projects management
    - Profile analytics endpoints
    - Comprehensive value objects
    - Repository pattern with async support
end note

entity ExperienceModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  title: String(200)
  company: String(200)
  location: String(200)?
  start_date: Date
  end_date: Date?
  is_current: Boolean = False
  description: Text
  achievements: JSON[]
  display_order: Integer = 0
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

entity EducationModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  institution: String(200)
  degree: String(200)
  field_of_study: String(200)
  start_date: Date
  end_date: Date?
  gpa: Float(3,2)?
  honors: JSON[]
  display_order: Integer = 0
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

entity SkillModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  name: String(100)
  category: Enum(technical, soft, language, certification)
  proficiency_level: Enum(beginner, intermediate, advanced, expert)?
  years_experience: Float?
  display_order: Integer = 0
  is_featured: Boolean = False
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

entity LanguageModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  name: String(100)
  proficiency: Enum(basic, conversational, fluent, native)
  display_order: Integer = 0
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

entity CertificationModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  name: String(200)
  issuer: String(200)
  date_obtained: Date
  expiry_date: Date?
  credential_id: String(100)?
  verification_url: String(500)?
  display_order: Integer = 0
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

entity ProjectModel {
  +id: String(36) (PK) <<UUID>>
  +profile_id: String(36) (FK → master_profiles.id)
  --
  name: String(200)
  description: Text
  technologies: JSON[]
  url: String(500)?
  start_date: Date?
  end_date: Date?
  display_order: Integer = 0
  is_featured: Boolean = False
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

' Unified Job Management Entity (F5 + F6 Complete)
entity JobModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36)? (FK → users.id) <<NULL for external jobs>>
  --
  title: String(200) (INDEX)
  company: String(200) (INDEX)
  location: String(200)?
  description: Text
  requirements: JSON[]
  responsibilities: JSON[]?
  benefits: JSON[]?
  --
  salary_min: Integer?
  salary_max: Integer?
  salary_currency: String(3) = 'USD'
  remote_work_policy: Enum(onsite, hybrid, remote, flexible)?
  job_type: Enum(full_time, part_time, contract, freelance, internship)?
  experience_level: Enum(entry, mid, senior, lead, executive)?
  --
  posted_date: DateTime?
  expires_date: DateTime?
  application_url: String(500)?
  --
  source: Enum(api, static, user_created, scraped, imported) = 'static'
  status: Enum(active, draft, archived, expired) = 'active'
  external_job_id: String(100)? <<For API sourced jobs>>
  --
  keywords_extracted: JSON[]?
  ats_keywords: JSON[]?
  priority_keywords: JSON[]?
  match_difficulty: Float?
  analysis_metadata: JSON?
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note right of JobModel
    **F5 + F6 Unified Job Management Complete**
    
    **Multiple Input Methods Supported:**
    - 📊 **API Source**: External job boards (Indeed, LinkedIn)
    - 📁 **Static Source**: Mock JSON data for development
    - ✏️  **User Created**: Copy-paste with JSON template conversion
    - 🔍 **Scraped**: Web scraping (future enhancement)
    - 📥 **Imported**: Bulk import from files
    
    **Key Features:**
    - Single entity for all job types (eliminates duplication)
    - Optional user_id (NULL for external jobs, set for user-created)
    - Source field tracks input method
    - Status management for user-created jobs
    - External job ID for API integration
    - Comprehensive search and filtering (6/6 tests passing)
    
    **Design Benefits:**
    - Simplified database schema
    - Unified API endpoints
    - Reduced code duplication
    - Consistent job processing pipeline
end note

' AI Generation Entities (F7-F8 Structure Ready)
entity GenerationModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36) (FK → users.id)
  +profile_id: String(36) (FK → master_profiles.id)
  +job_id: String(36) (FK → jobs.id)
  --
  status: Enum(pending, generating, completed, failed, cancelled) = 'pending'
  document_type: Enum(resume, cover_letter) = 'resume'
  --
  completed_at: DateTime?
  processing_time_seconds: Float?
  error_message: Text?
  retry_count: Integer = 0
  --
  pipeline_metadata: JSON? {stages, progress, timing}
  generation_options: JSON? {template, length, focus_areas}
  --
  llm_provider_used: String(50)?
  total_tokens_used: Integer?
  estimated_cost: Float?
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note right of GenerationModel
    **F7 Mock AI Pipeline Structure Ready**
    - 2-stage pipeline scaffolding
    - Generation tracking entity
    - Multiple LLM provider support
    - Job or custom job description support
    - Cost and token tracking
end note

entity DocumentModel {
  +id: String(36) (PK) <<UUID>>
  +generation_id: String(36) (FK → generations.id)
  +user_id: String(36) (FK → users.id)
  --
  document_type: Enum(resume, cover_letter)
  title: String(200)
  content_text: Text
  content_html: Text?
  content_markdown: Text?
  --
  template_used: String(50)?
  ats_score: Float? {0.0-1.0}
  word_count: Integer?
  --
  pdf_file_path: String(500)?
  pdf_size_bytes: Integer?
  pdf_page_count: Integer?
  --
  metadata: JSON? {job_match_%, keyword_coverage, etc.}
  version: Integer = 1
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note right of DocumentModel
    **F8 Export System Structure Ready**
    - Document storage entity
    - PDF generation tracking
    - Multiple content formats
    - ATS scoring system
    - File management support
    
    **Table Renamed**: generation_results → documents
    (for semantic clarity)
end note

' Job Application Tracking (Saved Jobs)
entity SavedJobModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36) (FK → users.id)
  +job_id: String(36) (FK → jobs.id)
  +generation_id: String(36)? (FK → generations.id)
  --
  status: Enum(interested, applied, interviewing, offered, rejected, withdrawn) = 'interested'
  applied_date: Date?
  --
  follow_up_date: Date?
  interview_date: DateTime?
  response_date: DateTime?
  --
  notes: Text?
  feedback: Text?
  application_url: String(500)?
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

note right of SavedJobModel
    **Table Renamed**: job_applications → saved_jobs
    (for API terminology alignment)
    
    **Enhanced Features**:
    - Unified job tracking (all sources: API, static, user-created)
    - Application status tracking
    - Integration with generation system
    - Simplified single job_id reference
end note

' Audit and Logging
entity AuditLogModel {
  +id: String(36) (PK) <<UUID>>
  +user_id: String(36)? (FK → users.id)
  --
  event_type: String(100)
  event_description: String(500)
  resource_type: String(50)?
  resource_id: String(36)?
  --
  ip_address: String(45)?
  user_agent: String(500)?
  request_id: String(36)?
  --
  metadata: JSON?
  severity: Enum(info, warning, error, critical) = 'info'
  --
  created_at: DateTime (AUTO)
  updated_at: DateTime (AUTO)
}

' Relationships (Updated for Current Implementation)
UserModel ||--o{ UserSessionModel : "has sessions"
UserModel ||--o{ MasterProfileModel : "owns profiles"
UserModel ||--o{ JobModel : "creates custom jobs (when user_id set)"
UserModel ||--o{ GenerationModel : "requests generations"
UserModel ||--o{ SavedJobModel : "tracks applications"
UserModel ||--o{ AuditLogModel : "generates logs"

MasterProfileModel ||--o{ ExperienceModel : "contains experiences"
MasterProfileModel ||--o{ EducationModel : "contains education"
MasterProfileModel ||--o{ SkillModel : "contains skills"
MasterProfileModel ||--o{ LanguageModel : "contains languages"
MasterProfileModel ||--o{ CertificationModel : "contains certifications"
MasterProfileModel ||--o{ ProjectModel : "contains projects"
MasterProfileModel ||--o{ GenerationModel : "used in generations"

JobModel ||--o{ GenerationModel : "generates for (all job sources)"
JobModel ||--o{ SavedJobModel : "applied to (all job sources)"

GenerationModel ||--o{ DocumentModel : "produces documents"
GenerationModel ||--o{ SavedJobModel : "used in applications"

' Database Implementation Notes
note bottom
  **Current Implementation Status (F1-F6 Complete)**

  **✅ COMPLETED FEATURES:**
  - **F1 Environment**: FastAPI application with middleware, health checks, error handling
  - **F2 Database**: SQLAlchemy async with single schema approach, connection pooling
  - **F3 Authentication**: JWT tokens, bcrypt hashing, 13/13 tests passing (100%)
  - **F4 Profile Management**: Complete CRUD, value objects, repository pattern, analytics
  - **F5 + F6 Unified Job Management**: Single JobModel supporting all input methods
    • API sourced jobs (external_job_id for tracking)
    • Static JSON data (mock/seed data for development)
    • User-created jobs (copy-paste with JSON template conversion)
    • Keyword extraction and analysis for all sources
    • Unified search/filtering across all job types (6/6 tests passing)
  
  **🚧 STRUCTURE READY (F7-F8):**
  - **F7 Mock AI Pipeline**: Entity models in place, 2-stage pipeline scaffolding
  - **F8 Export System**: Document storage structure, PDF generation support
  
  **📊 PERFORMANCE OPTIMIZATIONS:**
  - Composite indexes for user queries (user_id + status + date)
  - Foreign key indexes for all relationships
  - JSON field support for flexible data structures
  - Async operations with proper connection pooling
  
  **🔒 DATA INTEGRITY:**
  - Cascade deletes for user data privacy compliance
  - Check constraints for data validation (enums, scores, etc.)
  - Unique constraints preventing duplicate applications
  - Proper foreign key relationships with referential integrity
  
  **📋 AUDIT TRAIL:**
  - Complete audit logging for compliance and debugging
  - Session tracking for security and user management
  - Versioning on profiles for change management
  - Request ID tracking for debugging support
  
  **🔄 SCHEMA CONSISTENCY:**
  - Table names aligned with API endpoints (jobs, documents, saved_jobs)
  - Unified JobModel eliminating JobModel/JobDescriptionModel duplication
  - Single schema.py approach replacing incremental migrations
  - Multi-database support (SQLite development, PostgreSQL production)
  - Simplified relationships with single job reference approach
end note

' Styling
skinparam entity {
  BackgroundColor lightyellow
  BorderColor black
  ArrowColor black
}

skinparam note {
  BackgroundColor lightblue
  BorderColor navy
}

@enduml